[package]
name = "rsqubic_vanity"
version = "0.1.0"
edition = "2021"
description = "High-performance Qubic vanity address generator in Rust"
license = "MIT"
repository = "https://github.com/genren00/rsQUBICVANITY"
homepage = "https://github.com/genren00/rsQUBICVANITY"
readme = "README.md"
keywords = ["qubic", "vanity", "address", "generator", "cryptocurrency"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "rsqubic_vanity"
path = "src/main.rs"

[dependencies]
# Native Qubic cryptography
tiny-keccak = { version = "2.0", features = ["k12"] }
fourq = "0.1.6"
base64 = "0.21"

# Existing dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
num_cpus = "1.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
